# HelloQt5

./: .travis.yml  CMakeLists.txt  LICENSE  _config.yml  bintray.json  bintray.json.in  build.sh  index.html  main.cpp  style.css
_branches/: 01_develop  02_release  03_master  develop  master
_builds/: mac_develop  mac_master  mac_release  ubuntu_develop  ubuntu_master  ubuntu_release
_data/: build_develop_mac_1.yml  build_develop_mac_10.yml  build_develop_mac_2.yml  build_develop_mac_3.yml  build_develop_mac_4.yml  build_develop_mac_5.yml  build_develop_mac_6.yml  build_develop_mac_7.yml  build_develop_mac_8.yml  build_develop_mac_9.yml  build_develop_ubuntu_1.yml  build_develop_ubuntu_10.yml  build_develop_ubuntu_2.yml  build_develop_ubuntu_3.yml  build_develop_ubuntu_4.yml  build_develop_ubuntu_5.yml  build_develop_ubuntu_6.yml  build_develop_ubuntu_7.yml  build_develop_ubuntu_8.yml  build_develop_ubuntu_9.yml  build_develop_win_1.yml  build_develop_win_10.yml  build_develop_win_2.yml  build_develop_win_3.yml  build_develop_win_4.yml  build_develop_win_5.yml  build_develop_win_6.yml  build_develop_win_7.yml  build_develop_win_8.yml  build_develop_win_9.yml  build_master_mac_1.yml  build_master_mac_10.yml  build_master_mac_2.yml  build_master_mac_3.yml  build_master_mac_4.yml  build_master_mac_5.yml  build_master_mac_6.yml  build_master_mac_7.yml  build_master_mac_8.yml  build_master_mac_9.yml  (+51 more)
_platforms/: mac  ubuntu
assets/css/: style.css
mac/: mac_setup.sh  setup.sh
ubuntu/: packaging.cmake  setup.sh  ubuntu_setup.sh
